# Vectorly

./: CMakeLists.txt  Readme.md
sources/: CMakeLists.txt  ImMakefile  imgui.ini  main.cpp
sources/app/: CMakeLists.txt  app.cpp  app.hh
sources/gui/: CMakeLists.txt  splash_window.cpp  splash_window.hh  window.cpp  window.h  window_manager.cpp  window_manager.hh
sources/imgui/: .gitignore  CMakeLists.txt
